Fix album cover and button alignment

--- a/less/main.less
+++ b/less/main.less
@@ -255,12 +255,13 @@ h2 {
 .music-album {
   display: flex;
   align-items: flex-start;
+  justify-content: space-between;
   margin-bottom: 100px;
 }
 
 .music-album .thumbnail {
-  width: 48%;
   margin-right: 70px;
+  flex-basis: 50%;
 }
 
 .music-album .thumbnail img {
